<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC_TAPERR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Read</string>
    <string name="title_section2">Write</string>
    <string name="title_section3">Share</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="signin_button_label">Sign In!</string>
    <string name="sign_up_button">Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup_error_message">Please make sure you enter a valid username, password, and username</string>
    <string name="signup_error_title">Oops! :-(</string>
    <string name="signin_error_message">Please make sure you enter a valid username, and password</string>
    <string name="signin_error_title">Oops! :-(</string>
    <string name="menu_signout_label">SignOut</string>
    <string name="read_tag_label">TAP TAG TO READ</string>
    <string name="shareText">TAP TO SHARE</string>
    <string name="writeText">WRITE YOUR TAG</string>
    <string name="read_tag">READ</string>
    <string name="write_tag">WRITE</string>
    <string name="share_tag">SHARE</string>
    <string name="title_activity_read_tag">ReadTagActivity</string>
    <string name="title_activity_share_tag">ShareTagActivity</string>
    <string name="title_activity_write_tag">WriteTagActivity</string>
    <string name="erase_tag">ERASE</string>
    <string name="lock_tag">LOCK</string>
    <string name="title_activity_writer_pad">WriterPadActivity</string>
    <string name="message_title">Please Write Your TAG</string>
    <string name="wri_ter">Write!!</string>
    <string name="write_hint">Write your Tag</string>
     <string name="error_detected">TAG NOT DETECTED. WHERE DO YOU WANT WRITE!?!?</string>
    <string name="ok_writing">You HAVE WRITTEN YOUR FIRST TAG!!</string>
    <string name="error_writing">ERROR DURING WRITING. ARE YOU SURE THAT YOUR TAG IS CLOSE TO YOUR MOBILE PHONE?</string>
    <string name="ok_detection">TAG DETECTED: </string>

</resources>
